force-app/main/default/objects/copado__Destination_Org__c/fields/copado__Deployment__c.field-meta.xml
<CustomField>
    <fullName>copado__Deployment__c</fullName>
    <label>Deployment</label>
    <referenceTo>copado__Deployment__c</referenceTo>
    <relationshipName>Destination_Orgs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>