force-app/main/default/objects/copado__Destination_Org__c/fields/copado__Status__c.field-meta.xml
<CustomField>
    <fullName>copado__Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Not started</fullName>
                <default>true</default>
                <label>Not started</label>
            </value>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>Completed Successfully</fullName>
            </value>
            <value>
                <fullName>Completed with Errors</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>