force-app/main/default/objects/copado__Destination_Org__c/fields/copado__Step_Count__c.field-meta.xml
<CustomField>
    <fullName>copado__Step_Count__c</fullName>
    <label>Step Count</label>
    <summaryForeignKey>copado__Deployment_Job__c.copado__Destination_Org__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>