force-app/main/default/objects/copado__Destination_Org__c/fields/copado__SUM_Deployed__c.field-meta.xml
<CustomField>
    <fullName>copado__SUM_Deployed__c</fullName>
    <label>SUM Deployed</label>
    <summarizedField>copado__Deployment_Job__c.copado__Deployed__c</summarizedField>
    <summaryForeignKey>copado__Deployment_Job__c.copado__Destination_Org__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>