force-app/main/default/objects/copado__Destination_Org__c/fields/copado__To_Org__c.field-meta.xml
<CustomField>
    <fullName>copado__To_Org__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>To Credential</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>copado__Org__c.CreatedById</field>
            <operation>equals</operation>
            <valueField>$User.Id</valueField>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>copado__Org__c</referenceTo>
    <relationshipLabel>Destination Credentials</relationshipLabel>
    <relationshipName>Deployments_to</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>